Adding option to remove profilepic, and option to remove posts as admin

--- a/Project/App/LnuChat/Base.lproj/Localizable.strings
+++ b/Project/App/LnuChat/Base.lproj/Localizable.strings
@@ -73,6 +73,9 @@
 "IMAGESAVED" = "Bilden sparad";
 
 "CREATE" = "Skapa";
+"REMOVEIMAGE" = "Ta bort";
+"REMOVEIMAGEDETAILED" = "Är du säker att du vill ta bort din profilbild?";
+"REMOVEDPICTURE" = "Profilbild borttagen";
 
 
 
